--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@recharts/devtools": "^0.0.5",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react-router-dom": "^5.3.3",
     "formik": "^2.4.9",
+    "framer-motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
+    "recharts": "^3.6.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.18",
     "yup": "^1.7.1"
